package game.creature;

public class Species {
    
}
