package game.player;
public interface Interactable{
    void onInteract(Player player);
}