@startuml exploration_encounter
skinparam style strictuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor #F8FAFC
    BorderColor #64748B
    FontColor #0F172A
}

skinparam class<<abstract>> {
    BackgroundColor #FFF7ED
    BorderColor #C2410C
    FontColor #9A3412
}

skinparam class<<interface>> {
    BackgroundColor #ECFEFF
    BorderColor #0F766E
    FontColor #115E59
}

skinparam class<<enum>> {
    BackgroundColor #EEF2FF
    BorderColor #4338CA
    FontColor #312E81
}

package "game.exploration" {
    class EncounterZone #F8FAFC {
        -name: String
        -isCaptureArea: Boolean
        -rollIntervalSeconds: Double
        -table: EncounterTable
        +contains(tileX: Integer, tileY: Integer) Boolean
        +supportsWildEncounter() Boolean
    }

    class EncounterTable #F8FAFC {
        -entries: List<EncounterEntry>
        +rollWildEntry() EncounterEntry
        +hasEntries() Boolean
    }

    class EncounterEntry #F8FAFC {
        -species: Species
        -minLevel: Integer
        -maxLevel: Integer
        -encounterChance: Double
        +matchesRoll(roll: Double) Boolean
        +rollLevel() Integer
    }

    class WildEncounterService #F8FAFC {
        -currentZone: EncounterZone
        -elapsedSeconds: Double
        -timerActive: Boolean
        +update(player: Player, zone: EncounterZone, deltaTime: Double) Battle
        +rollEncounter(zone: EncounterZone) EncounterEntry
        +startWildBattle(player: Player, entry: EncounterEntry) Battle
        +stopTimer() void
        +resumeTimer() void
        +resetTimer() void
    }

    class EncounterService #F8FAFC {
        -battleRunning: Boolean
        -wildService: WildEncounterService
        +updateWildEncounter(player: Player, zone: EncounterZone, deltaTime: Double) Battle
        +startNpcBattle(player: Player, opponent: NpcTrainer) Battle
        +pauseEncounterTimers() void
        +resumeEncounterTimers() void
    }
}

package "game.shared" {
    interface Interactable <<interface>> #ECFEFF {
        +onInteract(player: Player) void
    }
}

package "game.creature" {
    class Species #F8FAFC
}

package "game.player" {
    class Player #F8FAFC
}

package "game.battle" {
    class NpcTrainer #F8FAFC
    class WildTrainer #F8FAFC
    class Battle #F8FAFC
}

EncounterZone *-- EncounterTable
EncounterTable *-- "1..*" EncounterEntry
EncounterEntry --> Species

WildEncounterService --> EncounterZone
WildEncounterService --> EncounterTable
WildEncounterService --> EncounterEntry
WildEncounterService ..> WildTrainer

EncounterService --> WildEncounterService
EncounterService --> NpcTrainer : onInteract(player)
EncounterService --> Battle

Interactable <|.. NpcTrainer

note right of EncounterService
NPC battle start is abstract here.
Interaction validation (distance/button/click)
is performed outside this package by NPC GameObject
or interaction layer before calling startNpcBattle.
end note

note right of WildEncounterService
Wild encounter is concrete:
while player is in capture area, timer accumulates
and rolls chance every interval, even standing still.
When battle starts, timer pauses.
end note

@enduml
